update ping path
