# go-server-generated/api/swagger.yaml
@@ -1,12 +1,27 @@
 openapi: 3.0.1
 info:
   title: ABM de Usuarios
-  description: ''
   version: 1.0.0
+servers:
+- url: /
 tags:
 - name: Usuarios
   description: Usuarios
 paths:
+  /ping:
+    get:
+      tags: 
+      - Status
+      summary: ping
+      operationId: ping
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Pong"
   /usuarios:
     get:
       tags:
@@ -14,7 +29,7 @@ paths:
       summary: Todos los usuario
       operationId: obtenerUsuarios
       responses:
-        201:
+        "201":
           description: OK
           content:
             application/json:
@@ -22,10 +37,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Usuario'
-        405:
+                x-content-type: application/json
+        "405":
           description: Input invalido
           content: {}
       x-codegen-request-body-name: body
+      x-swagger-router-controller: Usuarios
     post:
       tags:
       - Usuarios
@@ -39,47 +56,73 @@ paths:
               $ref: '#/components/schemas/Usuario'
         required: true
       responses:
-        201:
+        "201":
           description: OK
           content: {}
-        405:
+        "405":
           description: Input invalido
           content: {}
       x-codegen-request-body-name: body
+      x-swagger-router-controller: Usuarios
   /usuarios/{username}:
     get:
       tags:
       - Usuarios
       summary: Obtener usuario por username
       operationId: obtenerUsuarioByUsername
-      parameters: 
-        - in: path
-          name: username
-          schema:
-            type: string
-          required: true
+      parameters:
+      - name: username
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
-        200:
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Usuario'
-        404:
+        "404":
           description: Not found
           content: {}
       x-codegen-request-body-name: body
+      x-swagger-router-controller: Usuarios
+    delete:
+      tags:
+      - Usuarios
+      summary: Eliminar usuario por username
+      operationId: eliminarUsuarioByUsername
+      parameters:
+      - name: username
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not found
+          content: {}
+      x-swagger-router-controller: Usuarios
     patch:
       tags:
       - Usuarios
       summary: Actualizar usuario por username
       operationId: actualizarUsuarioByUsername
-      parameters: 
-        - in: path
-          name: username
-          schema:
-            type: string
-          required: true
+      parameters:
+      - name: username
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       requestBody:
         description: Usuario
         content:
@@ -88,33 +131,17 @@ paths:
               $ref: '#/components/schemas/Usuario'
         required: true
       responses:
-        200:
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Usuario'
-        404:
+        "404":
           description: Not found
           content: {}
       x-codegen-request-body-name: body
-    delete:
-      tags:
-      - Usuarios
-      summary: Eliminar usuario por username
-      operationId: eliminarUsuarioByUsername
-      parameters: 
-        - in: path
-          name: username
-          schema:
-            type: string
-          required: true
-      responses:
-        200:
-          description: OK
-        404:
-          description: Not found
-          content: {}
+      x-swagger-router-controller: Usuarios
 components:
   schemas:
     Usuario:
@@ -129,6 +156,13 @@ components:
         apellidos:
           type: string
         genero:
-          type: 'string'
+          type: string
         fechaNacimiento:
           type: string
+      example:
+        apellidos: apellidos
+        fechaNacimiento: fechaNacimiento
+        genero: genero
+        documento: documento
+        username: username
+        nombres: nombres
