# go-server-generated/go/routers.go
@@ -6,86 +6,93 @@
  * API version: 1.0.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package swagger
+ package swagger
 
-import (
-	"fmt"
-	"net/http"
-	"strings"
-
-	"github.com/gorilla/mux"
-)
-
-type Route struct {
-	Name        string
-	Method      string
-	Pattern     string
-	HandlerFunc http.HandlerFunc
-}
-
-type Routes []Route
-
-func NewRouter() *mux.Router {
-	router := mux.NewRouter().StrictSlash(true)
-	for _, route := range routes {
-		var handler http.Handler
-		handler = route.HandlerFunc
-		handler = Logger(handler, route.Name)
-
-		router.
-			Methods(route.Method).
-			Path(route.Pattern).
-			Name(route.Name).
-			Handler(handler)
-	}
-
-	return router
-}
-
-func Index(w http.ResponseWriter, r *http.Request) {
-	fmt.Fprintf(w, "Hello World!")
-}
-
-var routes = Routes{
-	Route{
-		"Index",
-		"GET",
-		"/",
-		Index,
-	},
-
-	Route{
-		"ActualizarUsuarioByUsername",
-		strings.ToUpper("Patch"),
-		"/usuarios/{username}",
-		ActualizarUsuarioByUsername,
-	},
-
-	Route{
-		"CrearUsuario",
-		strings.ToUpper("Post"),
-		"/usuarios",
-		CrearUsuario,
-	},
-
-	Route{
-		"EliminarUsuarioByUsername",
-		strings.ToUpper("Delete"),
-		"/usuarios/{username}",
-		EliminarUsuarioByUsername,
-	},
-
-	Route{
-		"ObtenerUsuarioByUsername",
-		strings.ToUpper("Get"),
-		"/usuarios/{username}",
-		ObtenerUsuarioByUsername,
-	},
-
-	Route{
-		"ObtenerUsuarios",
-		strings.ToUpper("Get"),
-		"/usuarios",
-		ObtenerUsuarios,
-	},
-}
+ import (
+	 "fmt"
+	 "net/http"
+	 "strings"
+ 
+	 "github.com/gorilla/mux"
+ )
+ 
+ type Route struct {
+	 Name        string
+	 Method      string
+	 Pattern     string
+	 HandlerFunc http.HandlerFunc
+ }
+ 
+ type Routes []Route
+ 
+ func NewRouter() *mux.Router {
+	 router := mux.NewRouter().StrictSlash(true)
+	 for _, route := range routes {
+		 var handler http.Handler
+		 handler = route.HandlerFunc
+		 handler = Logger(handler, route.Name)
+ 
+		 router.
+			 Methods(route.Method).
+			 Path(route.Pattern).
+			 Name(route.Name).
+			 Handler(handler)
+	 }
+ 
+	 return router
+ }
+ 
+ func Index(w http.ResponseWriter, r *http.Request) {
+	 fmt.Fprintf(w, "Hello World!")
+ }
+ 
+ var routes = Routes{
+	 Route{
+		 "Index",
+		 "GET",
+		 "/",
+		 Index,
+	 },
+ 
+	 Route{
+		 "Ping",
+		 strings.ToUpper("Get"),
+		 "/ping",
+		 Ping,
+	 },
+ 
+	 Route{
+		 "ActualizarUsuarioByUsername",
+		 strings.ToUpper("Patch"),
+		 "/usuarios/{username}",
+		 ActualizarUsuarioByUsername,
+	 },
+ 
+	 Route{
+		 "CrearUsuario",
+		 strings.ToUpper("Post"),
+		 "/usuarios",
+		 CrearUsuario,
+	 },
+ 
+	 Route{
+		 "EliminarUsuarioByUsername",
+		 strings.ToUpper("Delete"),
+		 "/usuarios/{username}",
+		 EliminarUsuarioByUsername,
+	 },
+ 
+	 Route{
+		 "ObtenerUsuarioByUsername",
+		 strings.ToUpper("Get"),
+		 "/usuarios/{username}",
+		 ObtenerUsuarioByUsername,
+	 },
+ 
+	 Route{
+		 "ObtenerUsuarios",
+		 strings.ToUpper("Get"),
+		 "/usuarios",
+		 ObtenerUsuarios,
+	 },
+ } 
